add some literature and load JSON dynamically

--- a/survey.bib
+++ b/survey.bib
@@ -1940,3 +1940,35 @@
 	month = feb,
 	year = {2014}
 }
+
+@inproceedings{seipp_learning_2012,
+	title = {Learning Portfolios of Automatically Tuned Planners},
+	booktitle = {{ICAPS}},
+	publisher = {{AAAI}},
+	author = {Seipp, Jendrik and Braun, Manuel and Garimort, Johannes and Helmert, Malte},
+	year = {2012}
+}
+
+@inproceedings{maratea_automated_2013,
+	title = {Automated Selection of Grounding Algorithm in Answer Set Programming},
+	booktitle = {{AI*IA}},
+	author = {Maratea, Marco and Pulina, Luca and Ricca, Francesco},
+	year = {2013},
+	pages = {73--84}
+}
+
+@article{maratea_multi-engine_2013,
+	title = {A Multi-Engine Approach to Answer-Set Programming},
+	journal = {Theory and Practice of Logic Programming},
+	author = {Maratea, Marco and Pulina, Luca and Ricca, Francesco},
+	year = {2013},
+	pages = {1--28}
+}
+
+@inproceedings{maratea_applying_2012,
+	title = {Applying Machine Learning Techniques to {ASP} Solving},
+	booktitle = {{ICLP}},
+	author = {Maratea, Marco and Pulina, Luca and Ricca, Francesco},
+	year = {2012},
+	pages = {37--48}
+}
