--- a/summary.tex
+++ b/summary.tex
@@ -245,6 +245,9 @@ features & runtime performance & ridge regression & offline & dynamic\\
 \citeA{sayag_combining_2006} & SAT & past performance & resource allocation &
 static model, probabilistic model & offline & static\\
 
+\citeA{ali_learning_2006} & classification & instance features & algorithm &
+decision rules & offline & static\\
+
 \citeA{xu_hierarchical_2007} & SAT & instance features & satisfiability and
 runtime performance & sparse multinomial logistic regression, ridge
 regression & offline & static\\
@@ -269,6 +272,9 @@ parameter & reinforcement learning & online & static\\
 \citeA{roberts_learned_2007,roberts_what_2008} & planning & instance features &
 runtime, probability of success & 32 different algorithms & offline &
 static\\
+
+\citeA{steer_information_2008} & - & fitness landscape features & algorithm & -
+& offline & static\\
 
 \citeA{streeter_new_2008} & SAT, integer programming, planning & instance features
 & resource allocation & statistical model & offline and online & static\\
@@ -316,6 +322,9 @@ reinforcement learning & online & static\\
 
 \citeA{bougeret_combining_2009} & SAT & past performance & resource allocation &
 static model & offline & static\\
+
+\citeA{smith-miles_knowledge_2009} & scheduling & instance features & algorithm
+& decision tree, neural networks, self-organizing maps & offline & static\\
 
 \citeA{leite_using_2010} & Machine Learning & past performance, probing &
 ranking of classification algorithms & statistical model & offline and online &
@@ -365,6 +374,12 @@ ranking & na\"ive Bayes & offline & static\\
 \citeA{kanda_using_2010,kanda_selection_2011} & TSP & instance features &
 algorithms & nearest neighbour, decision tree, SVM, na\"ive Bayes & offline &
 static\\
+
+\citeA{peng_population-based_2010} & numerical optimisation & past performance &
+resource allocation & optimisation & offline & static\\
+
+\citeA{graff_practical_2010} & program induction & fitness function &
+runtime performance & regression & offline & static\\
 
 \citeA{tolpin_rational_2011} & constraints & search statistics & algorithm &
 hand-crafted rules & online & static\\
@@ -421,7 +436,7 @@ past performance & portfolio & statistical model & offline & static\\
 \citeA{malitsky_parallel_2012} & SAT & past performance & resource allocation &
 nearest neighbour & offline and online & static\\
 
-\citeA{bischl_algorithm_2012} & optimisation problems & instance features &
+\citeA{bischl_algorithm_2012} & optimisation & instance features &
 algorithm & SVM & offline & static\\
 
 \citeA{veerapen_exploration-exploitation_2012} & Quadratic Assignment Problem
@@ -444,6 +459,10 @@ clustering & online & static\\
 
 \citeA{maratea_applying_2012,maratea_multi-engine_2013} & ASP & instance
 features & algorithm & classification & offline & static\\
+
+\citeA{munoz_meta-learning_2012} & optimisation & instance features, algorithm
+parameters & runtime performance & neural network regression & offline &
+static\\
 
 % 2013
 
@@ -480,7 +499,7 @@ classification, regression and clustering & offline & static\\
 clustering & offline & static\\
 
 \citeA{rayner_subset_2013} & combinatorial search & probing & subset of
-algorithms & optimisation problem & offline & static\\
+algorithms & optimisation & offline & static\\
 
 \citeA{sun_pairwise_2013} & machine learning & past performance & ranking &
 pairwise rules and trees & offline & static\\
@@ -490,6 +509,9 @@ algorithm & clustering & offline & static\\
 
 \citeA{maratea_automated_2013} & ASP & instance features & algorithm & PART
 decision rules & offline & static\\
+
+\citeA{wang_feature_2013} & feature selection & instance features & algorithm &
+nearest neighbour and optimisation & offline & static\\
 
 % 2014
 
@@ -507,6 +529,9 @@ algorithm & classification, regression, clustering & offline & static\\
 
 \citeA{kotthoff_ranking_2014} & CSP, SAT, QBF & instance features & ranking &
 classification, regression, meta-learning & offline & static\\
+
+\citeA{tang_population-based_2014} & numerical optimisation & past performance &
+algorithm portfolio & optimisation & offline & dynamic\\
 
 \end{longtable}
 \end{landscape}
