--- a/survey.bib
+++ b/survey.bib
@@ -1972,3 +1972,97 @@
 	year = {2012},
 	pages = {37--48}
 }
+
+@article{tang_population-based_2014,
+	title = {Population-based Algorithm Portfolios with automated constituent algorithms selection},
+	volume = {279},
+	issn = {0020-0255},
+	doi = {http://dx.doi.org/10.1016/j.ins.2014.03.105},
+	number = {0},
+	journal = {Information Sciences},
+	author = {Tang, Ke and Peng, Fei and Chen, Guoliang and Yao, Xin},
+	year = {2014},
+	pages = {94--104}
+}
+
+@article{peng_population-based_2010,
+	title = {Population-Based Algorithm Portfolios for Numerical Optimization},
+	volume = {14},
+	issn = {1089-778X},
+	doi = {10.1109/TEVC.2010.2040183},
+	number = {5},
+	journal = {Evolutionary Computation, {IEEE} Transactions on},
+	author = {Peng, Fei and Tang, Ke and Chen, Guoliang and Yao, Xin},
+	month = oct,
+	year = {2010},
+	pages = {782--800}
+}
+
+@article{ali_learning_2006,
+	title = {On learning algorithm selection for classification},
+	volume = {6},
+	issn = {1568-4946},
+	doi = {http://dx.doi.org/10.1016/j.asoc.2004.12.002},
+	number = {2},
+	journal = {Applied Soft Computing},
+	author = {Ali, Shawkat and Smith, Kate A.},
+	year = {2006},
+	pages = {119--138}
+}
+
+@article{wang_feature_2013,
+	title = {A Feature Subset Selection Algorithm Automatic Recommendation Method},
+	volume = {47},
+	issn = {1076-9757},
+	number = {1},
+	journal = {J. Artif. Int. Res.},
+	author = {Wang, Guangtao and Song, Qinbao and Sun, Heli and Zhang, Xueying and Xu, Baowen and Zhou, Yuming},
+	month = may,
+	year = {2013},
+	pages = {1--34}
+}
+
+@article{graff_practical_2010,
+	title = {Practical performance models of algorithms in evolutionary program induction and other domains},
+	volume = {174},
+	issn = {0004-3702},
+	doi = {http://dx.doi.org/10.1016/j.artint.2010.07.005},
+	number = {15},
+	journal = {Artificial Intelligence},
+	author = {Graff, Mario and Poli, Riccardo},
+	year = {2010},
+	keywords = {algorithm, problem, selection},
+	pages = {1254--1276}
+}
+
+@inproceedings{smith-miles_knowledge_2009,
+	title = {A Knowledge Discovery Approach to Understanding Relationships between Scheduling Problem Structure and Heuristic Performance},
+	volume = {5851},
+	booktitle = {Learning and Intelligent Optimization},
+	publisher = {Springer Berlin Heidelberg},
+	author = {Smith-Miles, Kate A. and James, Ross J.W. and Giffin, John W. and Tu, Yiqing},
+	year = {2009},
+	pages = {89--103}
+}
+
+@inproceedings{munoz_meta-learning_2012,
+	series = {Lecture Notes in Computer Science},
+	title = {A Meta-learning Prediction Model of Algorithm Performance for Continuous Optimization Problems},
+	volume = {7491},
+	booktitle = {Parallel Problem Solving from Nature - {PPSN} {XII}},
+	publisher = {Springer Berlin Heidelberg},
+	author = {Mu\~noz, Mario A. and Kirley, Michael and Halgamuge, Saman K.},
+	year = {2012},
+	pages = {226--235}
+}
+
+@inproceedings{steer_information_2008,
+	series = {Lecture Notes in Computer Science},
+	title = {Information Theoretic Classification of Problems for Metaheuristics},
+	volume = {5361},
+	booktitle = {Simulated Evolution and Learning},
+	publisher = {Springer Berlin Heidelberg},
+	author = {Steer, Kent C.B. and Wirth, Andrew and Halgamuge, Saman K.},
+	year = {2008},
+	pages = {319--328}
+}
