--- a/summary.tex
+++ b/summary.tex
@@ -163,6 +163,9 @@ characteristics & algorithm & genetic algorithms & offline & dynamic\\
 algorithms & instance features & algorithm & decision trees, general
 linear regression & offline and online & static\\
 
+\citeA{ruan_restart_2002} & SAT & instance features & restart policy & dynamic
+programming & offline & static\\
+
 \citeA{vrakas_learning_2003} & planning & instance features & parameters &
 classification association rules & offline & dynamic\\
 
@@ -532,6 +535,9 @@ classification, regression, meta-learning & offline & static\\
 
 \citeA{tang_population-based_2014} & numerical optimisation & past performance &
 algorithm portfolio & optimisation & offline & dynamic\\
+
+\citeA{fawcett_improved_2014} & planning & instance features & runtime &
+regression & offline & static\\
 
 \end{longtable}
 \end{landscape}
