--- a/survey.bib
+++ b/survey.bib
@@ -2066,3 +2066,23 @@
 	year = {2008},
 	pages = {319--328}
 }
+
+@inproceedings{ruan_restart_2002,
+	series = {Lecture Notes in Computer Science},
+	title = {Restart Policies with Dependence among Runs: A Dynamic Programming Approach.},
+	volume = {2470},
+	booktitle = {{CP}},
+	publisher = {Springer},
+	author = {Ruan, Yongshao and Horvitz, Eric and Kautz, Henry A.},
+	editor = {Hentenryck, Pascal Van},
+	month = oct,
+	year = {2002},
+	pages = {573--586}
+}
+
+@inproceedings{fawcett_improved_2014,
+	title = {Improved Features for Runtime Prediction of Domain-Independent Planners},
+	booktitle = {{ICAPS}},
+	author = {Fawcett, Chris and Vallati, Mauro and Hutter, Frank and Hoffmann, Jörg and Hoos, Holger and Leyton-Brown, Kevin},
+	year = {2014}
+}
