--- a/summary.tex
+++ b/summary.tex
@@ -276,6 +276,10 @@ parameter & reinforcement learning & online & static\\
 runtime, probability of success & 32 different algorithms & offline &
 static\\
 
+\citeA{de_la_rosa_case-based_2007,de_la_rosa_using_2007,de_la_rosa_case-based_2013}
+& planning & instance features & algorithm & case-based reasoning & online &
+static\\
+
 \citeA{steer_information_2008} & - & fitness landscape features & algorithm & -
 & offline & static\\
 
@@ -299,6 +303,9 @@ features, probing & algorithm, runtime performance & neural networks
 and self-organising maps & offline & static\\
 
 \citeA{stergiou_heuristics_2008,stergiou_heuristics_2009,paparrizou_evaluating_2012} & constraints & search statistics & propagation method & clustering & online & static\\
+
+\citeA{de_la_rosa_learning_2008,de_la_rosa_scaling_2011} & planning & instance
+features & algorithm & decision tree & online & static\\
 
 \citeA{nikoli_instance-based_2009} & SAT & instance features & search strategy &
 nearest neighbour & offline & static\\
@@ -423,6 +430,8 @@ static\\
 \citeA{smith-miles_discovering_2011} & TSP & instance features & algorithm &
 self-organizing map, decision tree, neural network & offline & static\\
 
+% 2012
+
 \citeA{kotthoff_hybrid_2012} & SAT, QBF, constraints & instance features,
 probing & algorithm & 5 regression algorithms, 2 classification
 algorithms & offline & static\\
@@ -508,7 +517,7 @@ algorithms & optimisation & offline & static\\
 pairwise rules and trees & offline & static\\
 
 \citeA{collautti_snnap_2013} & SAT & instance features, past performance &
-algorithm & clustering & offline & static\\
+algorithm & nearest neighbour, random forests & offline & static\\
 
 \citeA{maratea_automated_2013} & ASP & instance features & algorithm & PART
 decision rules & offline & static\\
@@ -538,6 +547,33 @@ algorithm portfolio & optimisation & offline & dynamic\\
 
 \citeA{fawcett_improved_2014} & planning & instance features & runtime &
 regression & offline & static\\
+
+\citeA{amadini_sequential_2014} & COP & instance features & resource allocation
+& nearest neighbour & offline & static\\
+
+\citeA{blet_experimental_2014} & CSP & instance features & algorithm & M5P
+regression & offline & static\\
+
+\citeA{malitsky_portfolio_2014} & Minimal Correction Subset & instance features,
+past performance & algorithm & nearest neighbour, random forests & offline &
+static\\
+
+\citeA{malitsky_timeout-sensitive_2014} & Minimal Correction Subset & instance
+features & resource allocation & nearest neighbour, regression & offline &
+static\\
+
+\citeA{ansotegui_maxsat_2014} & MaxSAT & instance features & algorithm &
+clustering & offline & static\\
+
+\citeA{malitsky_latent_2014} & CSP, MaxSAT, SAT & instance features, past
+performance & algorithm & random forest and linear regression & offline &
+static\\
+
+\citeA{smith_recommending_2014} & classification & past performance & algorithm
+& collaborative filtering & offline & static\\
+
+\citeA{garbajosa_planning_2014} & planning & instance features & algorithm &
+classifier ensemble & online & static\\
 
 \end{longtable}
 \end{landscape}
