--- a/survey.bib
+++ b/survey.bib
@@ -2086,3 +2086,109 @@
 	author = {Fawcett, Chris and Vallati, Mauro and Hutter, Frank and Hoffmann, Jörg and Hoos, Holger and Leyton-Brown, Kevin},
 	year = {2014}
 }
+
+@inproceedings{amadini_sequential_2014,
+	title = {Sequential Time Splitting and Bounds Communication for a Portfolio of Optimization Solvers},
+	booktitle = {Principles and Practice of Constraint Programming},
+	author = {Amadini, Roberto and Stuckey, Peter J.},
+	year = {2014},
+	pages = {108--124}
+}
+
+@inproceedings{blet_experimental_2014,
+	title = {Experimental Comparison of {BTD} and Intelligent Backtracking: Towards an Automatic Per-instance Algorithm Selector},
+	booktitle = {Principles and Practice of Constraint Programming},
+	author = {Blet, Lo{\"i}c and Ndiaye, SambaNdojh and Solnon, Christine},
+	year = {2014},
+	pages = {190--206}
+}
+
+@inproceedings{malitsky_portfolio_2014,
+	title = {A Portfolio Approach to Enumerating Minimal Correction Subsets for Satisfiability Problems},
+	booktitle = {{CPAIOR}},
+	author = {Malitsky, Yuri and O’Sullivan, Barry and Previti, Alessandro and Marques-Silva, Jo\~ao},
+	year = {2014}
+}
+
+@inproceedings{ansotegui_maxsat_2014,
+	title = {{MaxSAT} by Improved Instance-Specific Algorithm Configuration},
+	booktitle = {{AAAI}},
+	author = {Ans\'otegui, Carlos and Malitsky, Yuri and Sellmann, Meinolf},
+	year = {2014},
+	pages = {2594--2600}
+}
+
+@inproceedings{malitsky_timeout-sensitive_2014,
+	title = {Timeout-Sensitive Portfolio Approach to Enumerating Minimal Correction Subsets for Satisfiability Problems},
+	booktitle = {{ECAI}},
+	author = {Malitsky, Yuri and O'Sullivan, Barry and Previti, Alessandro and Marques-Silva, Jo\~ao},
+	year = {2014},
+	pages = {1065--1066}
+}
+
+@inproceedings{malitsky_latent_2014,
+	title = {Latent Features for Algorithm Selection},
+	booktitle = {{SoCS}},
+	author = {Malitsky, Yuri and O'Sullivan, Barry},
+	year = {2014}
+}
+
+@inproceedings{smith_recommending_2014,
+	title = {Recommending Learning Algorithms and Their Associated Hyperparameters},
+	booktitle = {{MetaSel}},
+	author = {Smith, Michael R. and Mitchell, Logan and Giraud-Carrier, Christophe G. and Martinez, Tony R.},
+	year = {2014}
+}
+
+@article{de_la_rosa_scaling_2011,
+	title = {Scaling Up Heuristic Planning with Relational Decision Trees},
+	volume = {40},
+	number = {1},
+	journal = {J. Artif. Int. Res.},
+	author = {de la Rosa, Tom\'as and Jim\'enez, Sergio and Fuentetaja, Raquel and Borrajo, Daniel},
+	month = jan,
+	year = {2011},
+	pages = {767--813}
+}
+
+@inproceedings{de_la_rosa_learning_2008,
+	title = {Learning Relational Decision Trees for Guiding Heuristic Planning},
+	booktitle = {{ICAPS}},
+	author = {de la Rosa, Tom\'as and Celorrio, Sergio Jim\'enez and Borrajo, Daniel},
+	year = {2008},
+	pages = {60--67}
+}
+
+@inproceedings{de_la_rosa_case-based_2007,
+	title = {Case-Based Recommendation of Node Ordering in Planning},
+	booktitle = {International Florida Artificial Intelligence Research Society Conference},
+	author = {de la Rosa, Tom\'as and Olaya, Angel Garc\'ia and Borrajo, Daniel},
+	year = {2007},
+	pages = {393--398}
+}
+
+@inproceedings{de_la_rosa_using_2007,
+	title = {Using Cases Utility for Heuristic Planning Improvement},
+	booktitle = {Case-Based Reasoning Research and Development},
+	author = {de la Rosa, Tom\'as and Garc\'ia Olaya, Angel and Borrajo, Daniel},
+	year = {2007},
+	pages = {137--148}
+}
+
+@article{de_la_rosa_case-based_2013,
+	title = {A case-based approach to heuristic planning},
+	volume = {39},
+	number = {1},
+	journal = {Applied Intelligence},
+	author = {de la Rosa, Tom\'as and Garc\'ia Olaya, Angel and Borrajo, Daniel},
+	year = {2013},
+	pages = {184--201}
+}
+
+@inproceedings{garbajosa_planning_2014,
+	title = {Planning with ensembles of classifiers},
+	booktitle = {{ECAI}},
+	author = {Garbajosa, Alberto and de la Rosa, Tom\'as and Fuentetaja, Raquel},
+    pages = {1007--1008},
+	year = {2014}
+}
