--- a/summary.tex
+++ b/summary.tex
@@ -4,11 +4,8 @@
 \usepackage{longtable}
 \usepackage{booktabs}
 
-\def\mytitle{Algorithm Selection for Combinatorial Search Problems: A survey}
-\def\myauthor{Lars Kotthoff}
-
-\title{\mytitle}
-\author{\name \myauthor}
+\title{Algorithm Selection for Combinatorial Search Problems: A survey}
+\author{Lars Kotthoff}
 
 \begin{document}
 
@@ -457,8 +454,8 @@ and TSP & past performance & algorithm & statistical model & online & static\\
 \citeA{valenzano_arvandherd_2012} & planning & past performance & resource
 allocation & statistical model & offline and online & static\\
 
-\citeA{hutter_algorithm_2012} & SAT, MIP, TSP & instance features & algorithm
-performance & 11 algorithms & offline & static\\
+\citeA{hutter_algorithm_2012,hutter_algorithm_2014} & SAT, MIP, TSP & instance
+features & algorithm performance & 11 regression algorithms & offline & static\\
 
 \citeA{kanda_meta-learning_2012} & TSP & instance features & ranking & neural
 networks & offline & static\\
@@ -574,6 +571,15 @@ static\\
 
 \citeA{garbajosa_planning_2014} & planning & instance features & algorithm &
 classifier ensemble & online & static\\
+
+\citeA{amadini_sunny_2014} & constraints & instance features & resource
+allocation & nearest neighbour & offline & static\\
+
+\citeA{pihera_application_2014} & TSP & instance features & algorithm & 5
+classifiers & offline & static\\
+
+\citeA{st-pierre_nash_2014} & Go & past performance & policy & static rule and reinforcement
+learning & offline and online & static\\
 
 \end{longtable}
 \end{landscape}
