--- a/survey.bib
+++ b/survey.bib
@@ -2192,3 +2192,37 @@
     pages = {1007--1008},
 	year = {2014}
 }
+
+@article{hutter_algorithm_2014,
+	title = {Algorithm runtime prediction: Methods \& evaluation},
+	volume = {206},
+	number = {0},
+	journal = {Artificial Intelligence},
+	author = {Hutter, Frank and Xu, Lin and Hoos, Holger H. and Leyton-Brown, Kevin},
+	year = {2014},
+	pages = {79--111}
+}
+
+@article{amadini_sunny_2014,
+	title = {{SUNNY}: a Lazy Portfolio Approach for Constraint Solving},
+	volume = {14},
+	number = {4-5},
+	journal = {{TPLP}},
+	author = {Amadini, Roberto and Gabbrielli, Maurizio and Mauro, Jacopo},
+	year = {2014},
+	pages = {509--524}
+}
+
+@inproceedings{pihera_application_2014,
+	title = {Application of Machine Learning to Algorithm Selection for {TSP}},
+	booktitle = {{ICTAI}},
+	author = {Pihera, Josef and Nysret, Musliu},
+	year = {2014}
+}
+
+@inproceedings{st-pierre_nash_2014,
+	title = {The Nash and the Bandit Approaches for Adversarial Portfolios},
+	booktitle = {{CIG}},
+	author = {St-Pierre, David L. and Teytaud, Olivier},
+	year = {2014}
+}
