--- a/summary.tex
+++ b/summary.tex
@@ -522,6 +522,10 @@ decision rules & offline & static\\
 \citeA{wang_feature_2013} & feature selection & instance features & algorithm &
 nearest neighbour and optimisation & offline & static\\
 
+\citeA{king_autonomic_2013,king_network_2014} & power systems & instance
+features & algorithm & neural net, decision tree, random forest & offline &
+static\\
+
 % 2014
 
 \citeA{amadini_portfolio_2014} & constraints & instance features & algorithm,
@@ -578,8 +582,11 @@ allocation & nearest neighbour & offline & static\\
 \citeA{pihera_application_2014} & TSP & instance features & algorithm & 5
 classifiers & offline & static\\
 
-\citeA{st-pierre_nash_2014} & Go & past performance & policy & static rule and reinforcement
-learning & offline and online & static\\
+\citeA{st-pierre_nash_2014} & Go & past performance & policy & static rule and
+reinforcement learning & offline and online & static\\
+
+\citeA{van_rijn_algorithm_2014} & machine learning & instance features &
+algorithm & decision stumps, random forests & offline & static\\
 
 \end{longtable}
 \end{landscape}
