--- a/survey.bib
+++ b/survey.bib
@@ -2226,3 +2226,30 @@
 	author = {St-Pierre, David L. and Teytaud, Olivier},
 	year = {2014}
 }
+
+@inproceedings{van_rijn_algorithm_2014,
+	title = {Algorithm Selection on Data Streams},
+	booktitle = {Discovery Science},
+	author = {van Rijn, Jan N. and Holmes, Geoffrey and Pfahringer, Bernhard and Vanschoren, Joaquin},
+	year = {2014},
+	pages = {325--336}
+}
+
+@article{king_network_2014,
+	title = {Network State-Based Algorithm Selection for Power Flow Management Using Machine Learning},
+	volume = {{PP}},
+	number = {99},
+	journal = {{IEEE} Transactions on Power Systems},
+	author = {King, James E. and Jupe, Samuel C. E. and Taylor, Philip C.},
+	year = {2014},
+	pages = {1--8}
+}
+
+@inproceedings{king_autonomic_2013,
+	title = {Autonomic control algorithm selection in decentralised power systems: A voltage control case study},
+	booktitle = {International Conference and Exhibition on Electricity Distribution ({CIRED} 2013)},
+	author = {King, James E. and Taylor, Philip C. and Jupe, Samuel C. E.},
+	month = jun,
+	year = {2013},
+	pages = {1--4}
+}
