--- a/summary.tex
+++ b/summary.tex
@@ -588,6 +588,9 @@ reinforcement learning & offline and online & static\\
 \citeA{van_rijn_algorithm_2014} & machine learning & instance features &
 algorithm & decision stumps, random forests & offline & static\\
 
+\citeA{lieder_algorithm_2014} & sorting & instance features & performance &
+Bayesian regression & offline & static\\
+
 \end{longtable}
 \end{landscape}
 \hbadness=1000
