--- a/survey.bib
+++ b/survey.bib
@@ -2253,3 +2253,11 @@
 	year = {2013},
 	pages = {1--4}
 }
+
+@inproceedings{lieder_algorithm_2014,
+	title = {Algorithm selection by rational metareasoning as a model of human strategy selection},
+	volume = {27},
+	booktitle = {Advances in Neural Information Processing Systems},
+	author = {Lieder, Falk and Plunkett, Dillon and Hamrick, Jessica B. and Russell, Stuart J. and Hay, Nicholas J. and Griffiths, Thomas L.},
+	year = {2014}
+}
