new lit, mostly lion 9

--- a/summary.tex
+++ b/summary.tex
@@ -526,6 +526,9 @@ nearest neighbour and optimisation & offline & static\\
 features & algorithm & neural net, decision tree, random forest & offline &
 static\\
 
+\citeA{yuen_which_2013} & evolutionary algorithms & past performance & algorithm
+& linear regression & online & static\\
+
 % 2014
 
 \citeA{amadini_portfolio_2014} & constraints & instance features & algorithm,
@@ -590,6 +593,29 @@ algorithm & decision stumps, random forests & offline & static\\
 
 \citeA{lieder_algorithm_2014} & sorting & instance features & performance &
 Bayesian regression & offline & static\\
+
+\citeA{lindauer_algorithm_2014} & ASP, CSP, SAT, QBF, OR & instance features &
+resource allocation & lots & offline & static\\
+
+\citeA{hoos_claspfolio_2014} & ASP & instance features & resource allocation &
+pairwise classification, regression, clustering & offline & static\\
+
+% 2015
+
+\citeA{tierney_algorithm_2015} & container premarshalling & instance features,
+past performance & algorithm & hierarchical cost-sensitive clustering & offline
+& static\\
+
+\citeA{lindauer_sequential_2015} & SAT, QBF, ASP, container premarshalling &
+instance features & resource allocation & random forest pairwise classification,
+ridge regression, k-means clustering & offline & static\\
+
+\citeA{lindauer_autofolio_2015} & aslib 1.0 & instance features & resource
+allocation & pairwise classification, regression, clustering & offline &
+static\\
+
+\citeA{kotthoff_improving_2015} & TSP & instance features & algorithm &
+classification, regression, pairwise regression & offline & static\\
 
 \end{longtable}
 \end{landscape}
