--- a/survey.bib
+++ b/survey.bib
@@ -2261,3 +2261,57 @@
 	author = {Lieder, Falk and Plunkett, Dillon and Hamrick, Jessica B. and Russell, Stuart J. and Hay, Nicholas J. and Griffiths, Thomas L.},
 	year = {2014}
 }
+
+@inproceedings{yuen_which_2013,
+	title = {Which Algorithm Should I Choose at Any Point of the Search: An Evolutionary Portfolio Approach},
+	booktitle = {Proceedings of the 15th Annual Conference on Genetic and Evolutionary Computation},
+	author = {Yuen, Shiu Yin and Chow, Chi Kin and Zhang, Xin},
+	year = {2013},
+	pages = {567--574}
+}
+
+@inproceedings{tierney_algorithm_2015,
+	title = {An Algorithm Selection Benchmark of the Container Pre-Marshalling Problem},
+	booktitle = {Learning and Intelligent {OptimizatioN} ({LION}) 2015},
+	author = {Tierney, Kevin and Malitsky, Yuri},
+	year = {2015}
+}
+
+@phdthesis{lindauer_algorithm_2014,
+	title = {Algorithm Selection, Scheduling and Configuration of Boolean Constraint Solvers},
+	school = {University of Potsdam},
+	author = {Lindauer, Marius},
+	year = {2014}
+}
+
+@inproceedings{lindauer_sequential_2015,
+	title = {From Sequential Algorithm Selection to Parallel Portfolio Selection},
+	booktitle = {Proceedings of the International Conference on Learning and Intelligent Optimization ({LION}'15)},
+	author = {Lindauer, Marius and Hoos, Holger H. and Hutter, Frank},
+	year = {2015}
+}
+
+@article{hoos_claspfolio_2014,
+	title = {claspfolio 2: Advances in Algorithm Selection for Answer Set Programming},
+	volume = {14},
+	number = {4-5},
+	journal = {{TPLP}},
+	author = {Hoos, Holger and Lindauer, Marius and Schaub, Torsten},
+	year = {2014},
+	pages = {569--585}
+}
+
+@inproceedings{lindauer_autofolio_2015,
+	title = {{AutoFolio}: Algorithm Configuration for Algorithm Selection},
+	booktitle = {Proceedings of the Twenty-Ninth {AAAI} Workshops on Artificial Intelligence},
+	author = {Lindauer, Marius and Hoos, Holger H. and Hutter, Frank and Schaub, Torsten},
+	month = jan,
+	year = {2015}
+}
+
+@inproceedings{kotthoff_improving_2015,
+	title = {Improving the State of the Art in Inexact {TSP} Solving using Per-Instance Algorithm Selection},
+	booktitle = {{LION} 9},
+	author = {Kotthoff, Lars and Kerschke, Pascal and Hoos, Holger and Trautmann, Heike},
+	year = {2015}
+}
