--- a/summary.tex
+++ b/summary.tex
@@ -119,6 +119,9 @@ probing & algorithm & 9 different classifiers & offline & static\\
 performance & resource allocation & performance simulation for different
 allocations & offline & static\\
 
+\citeA{soares_zoomed_2000} & machine learning & instance features & ranking &
+nearest neighbour & offline & static\\
+
 \citeA{gomes_algorithm_2001} & constraints, mixed integer programming &
 past performance & algorithm & statistical model & offline & dynamic\\
 
@@ -196,8 +199,8 @@ regression, SVMs, Gaussian processes & offline & static\\
 algorithm? & Bayesian classifier, reinforcement learning & offline and online &
 static\\
 
-\citeA{soares_meta-learning_2004} & Machine Learning & instance features & ranking
-of SVM kernel widths & nearest neighbour & offline & static\\
+\citeA{soares_meta-learning_2004} & Machine Learning & instance features &
+ranking of SVM kernel widths & nearest neighbour & offline & static\\
 
 \citeA{guo_learning-based_2004} & most probable explanation problem & instance
 features & algorithm & decision trees, na\"ive Bayes rules, Bayes networks,
@@ -205,6 +208,9 @@ meta-learning techniques & offline & static\\
 
 \citeA{gagliolo_adaptive_2004} & search problems & past performance & resource
 allocation & linear model & online & static\\
+
+\citeA{prudencio_meta-learning_2004} & machine learning & instance features &
+ranking & decision trees and neural networks & offline & static\\
 
 \citeA{demmel_self-adapting_2005} & linear algebra & instance features &
 algorithm & multivariate Bayesian decision rule & offline & static\\
@@ -252,7 +258,7 @@ decision rules & offline & static\\
 runtime performance & sparse multinomial logistic regression, ridge
 regression & offline & static\\
 
-\citeA{pulina_multi-engine_2007,pulina_self-adaptive_2009} & QBF & instance
+\citeA{pulina_multi-engine_2007,pulina_self-adaptive_2009,pulina_aqme10_2010} & QBF & instance
 features & resource allocation & decision trees, decision rules, logistic
 regression, nearest neighbour & offline and online & static\\
 
@@ -388,6 +394,11 @@ resource allocation & optimisation & offline & static\\
 \citeA{graff_practical_2010} & program induction & fitness function &
 runtime performance & regression & offline & static\\
 
+\citeA{fialho_toward_2010} & genetic algorithms & past performance & algorithm &
+aggregation & online & static\\
+
+% 2011
+
 \citeA{tolpin_rational_2011} & constraints & search statistics & algorithm &
 hand-crafted rules & online & static\\
 
@@ -426,6 +437,9 @@ static\\
 
 \citeA{smith-miles_discovering_2011} & TSP & instance features & algorithm &
 self-organizing map, decision tree, neural network & offline & static\\
+
+\citeA{jankowski_selecting_2011} & machine learning & instance features &
+ranking & nearest neighbour & offline & static\\
 
 % 2012
 
@@ -529,6 +543,9 @@ static\\
 \citeA{yuen_which_2013} & evolutionary algorithms & past performance & algorithm
 & linear regression & online & static\\
 
+\citeA{loth_bandit-based_2013} & constraint programming & past performance &
+algorithm & reinforcement learning & online & static\\
+
 % 2014
 
 \citeA{amadini_portfolio_2014} & constraints & instance features & algorithm,
@@ -616,6 +633,12 @@ static\\
 
 \citeA{kotthoff_improving_2015} & TSP & instance features & algorithm &
 classification, regression, pairwise regression & offline & static\\
+
+\citeA{sabar_population_2015} & combinatorial search & past performance &
+algorithm & reinforcement learning & online & static\\
+
+\citeA{oentaryo_algorithm_2015} & SAT & instance features and past performance &
+ranking & stochastic optimisation & offline & static\\
 
 \end{longtable}
 \end{landscape}
