--- a/survey.bib
+++ b/survey.bib
@@ -2315,3 +2315,74 @@
 	author = {Kotthoff, Lars and Kerschke, Pascal and Hoos, Holger and Trautmann, Heike},
 	year = {2015}
 }
+
+@article{pulina_aqme10_2010,
+	title = {{AQME}'10},
+	volume = {7},
+	number = {2-3},
+	journal = {{JSAT}},
+	author = {Pulina, Luca and Tacchella, Armando},
+	year = {2010},
+	pages = {65--70}
+}
+
+@incollection{jankowski_selecting_2011,
+	title = {Selecting Machine Learning Algorithms Using the Ranking Meta-Learning Approach},
+	volume = {358},
+	booktitle = {Meta-Learning in Computational Intelligence},
+	author = {Prud\^encio, Ricardo B.C. and de Souto, Marcilio C.P. and Ludermir, Teresa B.},
+	year = {2011},
+	pages = {225--243}
+}
+
+@article{prudencio_meta-learning_2004,
+	title = {Meta-learning approaches to selecting time series models},
+	volume = {61},
+	number = {0},
+	journal = {Neurocomputing},
+	author = {Prud\^encio, Ricardo B. C. and Ludermir, Teresa B.},
+	year = {2004},
+	pages = {121--137}
+}
+
+@inproceedings{soares_zoomed_2000,
+	series = {Lecture Notes in Computer Science},
+	title = {Zoomed Ranking: Selection of Classification Algorithms Based on Relevant Performance Information},
+	booktitle = {Principles of Data Mining and Knowledge Discovery},
+	author = {Soares, Carlos and Brazdil, PavelB.},
+	year = {2000},
+	pages = {126--135}
+}
+
+@inproceedings{fialho_toward_2010,
+	title = {Toward Comparison-based Adaptive Operator Selection},
+	booktitle = {12th Annual Conference on Genetic and Evolutionary Computation},
+	author = {Fialho, \'Alvaro and Schoenauer, Marc and Sebag, Mich\`ele},
+	year = {2010},
+	pages = {767--774}
+}
+
+@inproceedings{loth_bandit-based_2013,
+	title = {Bandit-Based Search for Constraint Programming},
+	booktitle = {Principles and Practice of Constraint Programming},
+	author = {Loth, Manuel and Sebag, Mich\`ele and Hamadi, Youssef and Schoenauer, Marc},
+	year = {2013},
+	pages = {464--480}
+}
+
+@article{sabar_population_2015,
+	title = {Population based Monte Carlo tree search hyper-heuristic for combinatorial optimization problems},
+	volume = {314},
+	number = {0},
+	journal = {Information Sciences},
+	author = {Sabar, Nasser R. and Kendall, Graham},
+	year = {2015},
+	pages = {225--239}
+}
+
+@inproceedings{oentaryo_algorithm_2015,
+	title = {Algorithm Selection via Ranking},
+	booktitle = {{AAAI}},
+	author = {Oentaryo, Richard J. and Handoko, Daniel and Lau, Hoong Chuin},
+	year = {2015}
+}
