fix case issues

--- a/summary.tex
+++ b/summary.tex
@@ -35,10 +35,10 @@ dynamic\\
 representation & algorithms and data structures & simulated annealing & offline
 & static\\
 
-\citeA{aha_generalizing_1992} & Machine Learning & instance features & algorithm &
+\citeA{aha_generalizing_1992} & machine learning & instance features & algorithm &
 learned rules & offline & static\\
 
-\citeA{brodley_automatic_1993} & Machine Learning & instance and algorithm
+\citeA{brodley_automatic_1993} & machine learning & instance and algorithm
 features & algorithm & hand-crafted rules & offline & static\\
 
 \citeA{kamel_odexpert_1993} & differential equations & past performance,
@@ -177,7 +177,7 @@ meta-learning & offline & static\\
 statistics & local search algorithm & statistical model & offline and online &
 static\\
 
-\citeA{brazdil_ranking_2003} & Machine Learning & instance features & ranking &
+\citeA{brazdil_ranking_2003} & machine learning & instance features & ranking &
 nearest neighbour & offline & static\\
 
 \citeA{gebruers_making_2004} & bid evaluation problem & instance and instance
@@ -199,7 +199,7 @@ regression, SVMs, Gaussian processes & offline & static\\
 algorithm? & Bayesian classifier, reinforcement learning & offline and online &
 static\\
 
-\citeA{soares_meta-learning_2004} & Machine Learning & instance features &
+\citeA{soares_meta-learning_2004} & machine learning & instance features &
 ranking of SVM kernel widths & nearest neighbour & offline & static\\
 
 \citeA{guo_learning-based_2004} & most probable explanation problem & instance
@@ -339,7 +339,7 @@ static model & offline & static\\
 \citeA{smith-miles_knowledge_2009} & scheduling & instance features & algorithm
 & decision tree, neural networks, self-organizing maps & offline & static\\
 
-\citeA{leite_using_2010} & Machine Learning & past performance, probing &
+\citeA{leite_using_2010} & machine learning & past performance, probing &
 ranking of classification algorithms & statistical model & offline and online &
 static\\
 
@@ -413,7 +413,7 @@ clustering & offline & dynamic\\
 
 \citeA{kotthoff_preliminary_2011,kotthoff_evaluation_2012} & SAT, QBF,
 constraints & instance features, probing & algorithm, runtime performance,
-ranking & 31 different Machine Learning algorithms & offline & static\\
+ranking & 31 different machine learning algorithms & offline & static\\
 
 \citeA{gagliolo_algorithm_2010,gagliolo_algorithm_2011} & SAT, QBF, constraints
 & past performance & resource allocation & reinforcement learning & online &
