--- a/summary.tex
+++ b/summary.tex
@@ -254,6 +254,9 @@ static model, probabilistic model & offline & static\\
 \citeA{ali_learning_2006} & classification & instance features & algorithm &
 decision rules & offline & static\\
 
+\citeA{cavazos_method-specific_2006} & software design & instance features &
+algorithm & logistic regression & offline & static\\
+
 \citeA{xu_hierarchical_2007} & SAT & instance features & satisfiability and
 runtime performance & sparse multinomial logistic regression, ridge
 regression & offline & static\\
@@ -639,6 +642,15 @@ algorithm & reinforcement learning & online & static\\
 
 \citeA{oentaryo_algorithm_2015} & SAT & instance features and past performance &
 ranking & stochastic optimisation & offline & static\\
+
+\citeA{chu_learning_2015} & constraints & instance features & heuristic &
+partial least squares regression & offline & static\\
+
+\citeA{balafrej_multi-armed_2015} & constraints & past performance & propagation
+method & multi-armed bandits & online & static\\
+
+\citeA{luo_fast_2015} & stencil computation & instance features & solution space
+& multiple linear regression & offline & static\\
 
 \end{longtable}
 \end{landscape}
