--- a/survey.bib
+++ b/survey.bib
@@ -2386,3 +2386,38 @@
 	author = {Oentaryo, Richard J. and Handoko, Daniel and Lau, Hoong Chuin},
 	year = {2015}
 }
+
+@inproceedings{chu_learning_2015,
+	title = {Learning {Value} {Heuristics} for {Constraint} {Programming}},
+	booktitle = {Integration of {AI} and {OR} {Techniques} in {Constraint} {Programming}},
+	author = {Chu, Geoffrey and Stuckey, Peter J.},
+	year = {2015},
+	pages = {108--123}
+}
+
+@article{cavazos_method-specific_2006,
+	title = {Method-specific {Dynamic} {Compilation} {Using} {Logistic} {Regression}},
+	volume = {41},
+	number = {10},
+	journal = {SIGPLAN Not.},
+	author = {Cavazos, John and O'Boyle, Michael F. P.},
+	month = oct,
+	year = {2006},
+	pages = {229--240}
+}
+
+@inproceedings{balafrej_multi-armed_2015,
+	title = {Multi-{Armed} {Bandits} for {Adaptive} {Constraint} {Propagation}},
+	booktitle = {{IJCAI}},
+	author = {Balafrej, Amine and Bessière, Christian and Paparrizou, Anastasia},
+	year = {2015}
+}
+
+@inproceedings{luo_fast_2015,
+	title = {{FAST}: {A} {Fast} {Stencil} {Autotuning} {Framework} {Based} {On} {An} {Optimal}-solution {Space} {Model}},
+	booktitle = {29th {ACM} on {International} {Conference} on {Supercomputing}},
+	publisher = {ACM},
+	author = {Luo, Yulong and Tan, Guangming and Mo, Zeyao and Sun, Ninghui},
+	year = {2015},
+	pages = {187--196}
+}
